--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "webpack -p --config config/prod.js",
-    "start": "webpack-dev-server --config config/dev.js"
+    "start": "webpack serve --open --config config/dev.js"
   },
   "dependencies": {
     "@brunoimbrizi/controlkit": "^0.1.93",
@@ -24,6 +24,7 @@
     "domready": "^1.0.8",
     "glsl-noise": "0.0.0",
     "gsap": "^2.0.2",
+    "html-webpack-plugin": "^5.5.3",
     "stats.js": "^0.17.0",
     "three": "^0.98.0"
   },
@@ -32,6 +33,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0-rc.1",
     "@babel/polyfill": "^7.0.0-beta.55",
     "@babel/preset-env": "^7.0.0-beta.52",
+    "@webpack-cli/serve": "^2.0.5",
     "babel-loader": "^8.0.0-beta.4",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
@@ -40,13 +42,12 @@
     "glslify": "^6.2.1",
     "glslify-import-loader": "^0.1.2",
     "glslify-loader": "^1.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "js-yaml": ">=3.13.1",
     "imports-loader": "^0.8.0",
+    "js-yaml": ">=3.13.1",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.21.0",
-    "webpack": "^4.15.1",
-    "webpack-cli": "^3.0.8",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": ">=3.1.11",
     "webpack-merge": "^4.1.3"
   }
